# plainstore

./: Procfile  README.md  pyproject.toml
src/: Dockerfile  manage.py
src/home/templates/home/: home_page.html  welcome_page.html
src/plainstore/: wsgi.py
src/plainstore/settings/: base.py  dev.py
src/plainstore/templates/: base.html
src/theme/static_src/: package-lock.json
