[tool.poetry]
name = "plainstore"
version = "0.1.0"
description = "Dead simple store for digital goods"
authors = ["manhtai <vo@manhtai.com>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
wagtail = "^2.15.1"
django-payments = "^0.15.0"
django-tailwind = "^3.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"
honcho = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
